<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect To Twitter</string>
    <string name="prifile_image">Profile Image</string>
    <string name="compose">compose</string>
    <string name="tweet">TWEET</string>
    <string name="tweet_hint">Dump your brain here.</string>
    <string name="reply">Reply</string>
    <string name="retweet">Retweet</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_tweets">TWEETS</string>
    <string name="label_following">FOLLOWING</string>
    <string name="label_followers">FOLLOWERS</string>

</resources>