<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#677b8b" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/prifile_image" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="\@foo"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"
            android:text="Foo"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlHeader"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llTweetCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTweetCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100" >
            </TextView>

            <TextView
                android:id="@+id/tvTweetLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tweets"
                android:textColor="#909090" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFollowingCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" >
            </TextView>

            <TextView
                android:id="@+id/tvFollowingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_following"
                android:textColor="#909090" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFollowerCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" >
            </TextView>

            <TextView
                android:id="@+id/tvFollowerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_followers"
                android:textColor="#909090" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/fUserTimeline"
        android:name="com.codepath.apps.twitterclient.fragments.UserTimelineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/llCounts"
        tools:layout="@layout/fragment_tweets_list" />

</RelativeLayout>